--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -2,9 +2,16 @@
 <html>
   <head>
     <meta charset='utf-8'>
+    <!-- VENDOR SOURCE SCRIPTS -->
+
+
+    <!-- VENDOR LINKS -->
+
+
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="menu.css">
+    <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="../styles/menu.css">
+
     <title>Asian Hon</title>
 
   </head>
@@ -67,14 +74,14 @@
   <table>
     <thead>
       <tr>
-        <th>Apps</th>
+        <th>Appetizers</th>
       </tr>
-      <tr>
+      <!-- <tr>
         <th>CR</th>
         <th>Item</th>
         <th>Pt.</th>
         <th>Qt.</th>
-      </tr>
+      </tr> -->
     </thead>
     <tbody>
       <tr>
@@ -121,6 +128,36 @@
       </tr>
       <tr>
         <td class='chef-rec'></td>
+        <td class='menu-item'>BBQ Pork</td>
+        <td class='price-pt'></td>
+        <td class='price-qt'>$5.95</td>
+      </tr>
+      <tr>
+        <td class='chef-rec'></td>
+        <td class='menu-item'>Teriyaki Chicken (4)</td>
+        <td class='price-pt'></td>
+        <td class='price-qt'>$6.95</td>
+      </tr>
+      <tr>
+        <td class='chef-rec'></td>
+        <td class='menu-item'>Teriyaki Beef (4)</td>
+        <td class='price-pt'></td>
+        <td class='price-qt'>$6.95</td>
+      </tr>
+      <tr>
+        <td class='chef-rec'></td>
+        <td class='menu-item'>Fried Shrimp (6)</td>
+        <td class='price-pt'></td>
+        <td class='price-qt'>$4.95</td>
+      </tr>
+      <tr>
+        <td class='chef-rec'></td>
+        <td class='menu-item'></td>
+        <td class='price-pt'></td>
+        <td class='price-qt'></td>
+      </tr>
+      <tr>
+        <td class='chef-rec'></td>
         <td class='menu-item'></td>
         <td class='price-pt'></td>
         <td class='price-qt'></td>
@@ -141,11 +178,6 @@
       <!-- END .appetizers -->
 
 
-
-BBQ Pork	5.95
-Teriyaki Chicken (4)	6.95
-Teriyaki Beef (4) 	6.95
-Fried Shrimp (6)	4.95
 Fried Scallops (8)	4.95
 Fried Tofu	4.95
 Chicken Nuggets (10)	3.95
