--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -9,9 +9,8 @@
 
 
     <!-- STYLESHEETS -->
-    <link rel="stylesheet" href="../styles/normalize.css">
+    <link rel='stylesheet' href='../styles/normalize.css'>
     <link rel='stylesheet' href='../styles/main.css'>
-    <link rel='stylesheet' href='../styles/menu.css'>
 
     <title>Asian Hon</title>
   </head>
@@ -42,7 +41,7 @@
         <!-- END .nav-top -->
       </div>
       <!-- END .nav-warpper -->
-
+      
     </div>
     <!-- END .header -->
 
@@ -54,30 +53,47 @@
         <li>Only within Shakopee, and</li>
         <li>Within 2-mile radius of restaurant.</li>
       </ul>
-      <!-- START .beverages -->
-      <div class='beverages'>
-        <h3>Beverages</h3>
-        <p>All beverages for delivery orders are soft drinks in 20 fl. oz. bottles.<br>The following are the beverages available for delivery:</p>
-        <ul>
-          <li>Pepsi</li>
-          <li>Diet Pepsi</li>
-          <li>Mountain Dew</li>
-          <li>Dr. Pepper</li>
-          <li>Mist Twist</li>
-          <li>Orange Crush</li>
-          <li>Lemon Iced Tea</li>
-          <li>Lemonade</li>
-        </ul>
-      </div>
-      <!-- END .beverages -->
 
 <!-- START .menu -->
 <div class='menu'>
+  <!-- START table .beverages -->
+  <table class='beverages'>
+    <thead>
+      <tr>
+        <th><h4>Beverages</h4></th>
+      </tr>
+      <tr>
+        <td>All beverages for delivery orders are soft drinks in 20 fl. oz. bottles.<br>The following are the beverages available for delivery:</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Pepsi</td>
+        <td>Mist Twist</td>
+      </tr>
+      <tr>
+        <td>Diet Pepsi</td>
+        <td>Orange Crush</td>
+      </tr>
+      <tr>
+        <td>Mountain Dew</td>
+        <td>Lemon Iced Tea</td>
+      </tr>
+      <tr>
+        <td>Dr. Pepper</td>
+        <td>Lemonade</td>
+      </tr>
+    </tbody>
+  </table>
+  <!-- END table .beverages -->
+
+
+
   <!-- START table .appetizers -->
   <table class='appetizers'>
     <thead>
       <tr>
-        <th><h3>Appetizers</h3></th>
+        <th><h4>Appetizers</h4></th>
       </tr>
     </thead>
     <tbody>
@@ -174,75 +190,50 @@
   <table class='fried-rice'>
     <thead>
       <tr>
-        <th>Fried Rice</th>
+        <th><h4>Fried Rice</h4></th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td class='chef-rec'></td>
         <td class='menu-item'>Vegetable</td>
         <td class='price-pt'>$3.95</td>
         <td class='price-qt'>$7.95</td>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
         <td class='menu-item'>Chicken</td>
         <td class='price-pt'>$4.95</td>
         <td class='price-qt'>$8.95</td>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
         <td class='menu-item'>Roast Pork</td>
         <td class='price-pt'>$4.95</td>
         <td class='price-qt'>$8.95</td>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
         <td class='menu-item'>Beef</td>
         <td class='price-pt'>$5.95</td>
         <td class='price-qt'>$9.95</td>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
         <td class='menu-item'>Shrimp</td>
         <td class='price-pt'>$5.95</td>
         <td class='price-qt'>$9.95</td>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'>House with Chicken, Roast Pork and Shrimp</td>
+        <td class='menu-item'>House</td>
         <td class='price-pt'>$5.95</td>
         <td class='price-qt'>$10.95</td>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'>Thai Pineapple with Chicken and Shrimp</td>
+        <td>With Chicken, Roast Pork and Shrimp.</td>
+      </tr>
+      <tr>
+        <td class='menu-item'>Thai Pineapple</td>
         <td class='price-pt'>$5.95</td>
         <td class='price-qt'>$10.95</td>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'></td>
-        <td class='price-pt'></td>
-        <td class='price-qt'></td>
-      </tr>
-      <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'></td>
-        <td class='price-pt'></td>
-        <td class='price-qt'></td>
-      </tr>
-      <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'></td>
-        <td class='price-pt'></td>
-        <td class='price-qt'></td>
-      </tr>
-      <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'></td>
-        <td class='price-pt'></td>
-        <td class='price-qt'></td>
+        <td class='item-description'>With Chicken and Shrimp.</td>
       </tr>
     </tbody>
   </table>
