Add menu.css and "tab leaders" to style

--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -11,6 +11,7 @@
     <!-- STYLESHEETS -->
     <link rel='stylesheet' href='../styles/normalize.css'>
     <link rel='stylesheet' href='../styles/main.css'>
+    <link rel="stylesheet" href="../styles/menu.css">
 
     <title>Asian Hon</title>
   </head>
@@ -56,188 +57,134 @@
 
 <!-- START .menu -->
 <div class='menu'>
+
+  <!-- START ul.beverages -->
+  <ul>
+    <li> <span></span> </li>
+  </ul>
+
+
+
   <!-- START table .beverages -->
-  <table class='beverages'>
+  <!-- <table class='beverages'>
     <thead>
       <tr>
         <th><h4>Beverages</h4></th>
       </tr>
       <tr>
-        <td>All beverages for delivery orders are soft drinks in 20 fl. oz. bottles.<br>The following are the beverages available for delivery:</td>
+        <td>All beverages for delivery orders are soft drinks in 20 fl. oz. bottles.<br>The following are the beverages available for delivery:<span>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Pepsi</td>
-        <td>Mist Twist</td>
+        <td>Pepsi<span>
+        <td>Mist Twist<span>
       </tr>
       <tr>
-        <td>Diet Pepsi</td>
-        <td>Orange Crush</td>
+        <td>Diet Pepsi<span>
+        <td>Orange Crush<span>
       </tr>
       <tr>
-        <td>Mountain Dew</td>
-        <td>Lemon Iced Tea</td>
+        <td>Mountain Dew<span>
+        <td>Lemon Iced Tea<span>
       </tr>
       <tr>
-        <td>Dr. Pepper</td>
-        <td>Lemonade</td>
+        <td>Dr. Pepper<span>
+        <td>Lemonade<span>
       </tr>
     </tbody>
-  </table>
+  </table> -->
   <!-- END table .beverages -->
 
+<div class="menu-div">
+  <h4>Appetizers</h4>
+  <!-- START ul.appetizers -->
+    <ul class="leaders">
+      <li><span>Egg Rolls (2)</span><span>3.95</span></li>
+      <li><span>Cream Cheese Wontons (6)</span><span>3.95</span></li>
+      <li><span>Fried Spring Rolls (2)</span><span>3.95</span></li>
+      <li><span>Chicken Wings (6)</span><span>5.95</span></li>
+      <li><span>Teriyaki Chicken Wings (6)</span><span>5.95</span></li>
+      <li><span>Fried Dumplings (6)</span><span>5.95</span></li>
+      <li><span>Steamed Dumplings (6)</span><span>5.95</span></li>
+      <li><span>BBQ Pork</span><span>5.95</span></li>
+      <li><span>Teriyaki Chicken (4)</span><span>6.95</span></li>
+      <li><span>Teriyaki Beef (4)</span><span>6.95</span></li>
+      <li><span>Fried Shrimp (6)</span><span>4.95</span></li>
+      <li><span>Fried Scallops (8)</span><span>4.95</span></li>
+      <li><span>Fried Tofu</span><span>4.95</span></li>
+      <li><span>Chicken Nuggets (10)</span><span>3.95</span></li>
+      <li><span>French Fries</span><span>3.95</span></li>
+      <li><span>Fried Sweet Doughnuts (10)</span><span>3.95</span></li>
+      <li><span>Fried Onion Rings</span><span>3.95</span></li>
+    </ul>
+  <!-- END ul.appetizers -->
+</div>
+
+<div class="menu-div">
+  <h4>Fried Rice</h4>
+  <!-- START ul.fried-rice -->
+    <ul class="leaders">
+      <li><span>Vegetable</span><span>7.95</span></li>
+      <li><span>Chicken</span><span>8.95</span></li>
+      <li><span>Roast Pork</span><span>8.95</span></li>
+      <li><span>Beef</span><span>9.95</span></li>
+      <li><span>Shrimp</span><span>9.95</span></li>
+      <li><span>House &mdash; with Chicken, Roast Pork and Shrimp</span><span>10.95</span></li>
+      <li><span>Thai Pineapple &mdash; with Chicken and Shrimp</span><span>10.95</span></li>
+    </ul>
+  <!-- END ul.fried-rice -->
+</div>
 
 
-  <!-- START table .appetizers -->
-  <table class='appetizers'>
-    <thead>
-      <tr>
-        <th><h4>Appetizers</h4></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class='menu-item'>Chicken Nuggets (10)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$3.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Cream Cheese Wontons (6)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$3.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Egg Rolls (2)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$3.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>French Fries</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$3.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Fried Onion Rings</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$3.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Fried Spring Rolls (2)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$3.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Fried Sweet Doughnuts (10)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$3.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Fried Scallops (8)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$4.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Fried Shrimp (6)</td>
-        <td class='price-pt'> </td>
-        <td class='price-qt'>$4.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Fried Tofu</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$4.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>BBQ Pork</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$5.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Chicken Wings (6)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$5.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Fried Dumplings (6)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$5.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Steamed Dumplings (6)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$5.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Teriyaki Chicken Wings (6)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$5.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Teriyaki Beef (4)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$6.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Teriyaki Chicken (4)</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$6.95</td>
-      </tr>
-    </tbody>
-  </table>
-  <!-- END table .appetizers -->
+  <h4>Lo Mein</h4>
+  <p>Lo Mein is made with soft noodles.</p>
+  <!-- START ul.lo-mein -->
+  <ul class="leaders">
+    <li><span>Plain</span><span>6.95</span></li>
+    <li><span>Vegetable</span><span>7.95</span></li>
+    <li><span>Chicken</span><span>8.95</span></li>
+    <li><span>Roast Pork</span><span>8.95</span></li>
+    <li><span>Beef</span><span>995</span></li>
+    <li><span>Shrimp</span><span>10.95</span></li>
+    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> House &mdash; with Chicken, Roast Pork & Shrimp</span><span>10.95</span></li>
+    <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.95</span></li>
+  </ul>
+  <!-- END ul.lo-mein -->
 
-  <!-- START table .fried-rice -->
-  <table class='fried-rice'>
-    <thead>
-      <tr>
-        <th><h4>Fried Rice</h4></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class='menu-item'>Vegetable</td>
-        <td class='price-pt'>$3.95</td>
-        <td class='price-qt'>$7.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Chicken</td>
-        <td class='price-pt'>$4.95</td>
-        <td class='price-qt'>$8.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Roast Pork</td>
-        <td class='price-pt'>$4.95</td>
-        <td class='price-qt'>$8.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Beef</td>
-        <td class='price-pt'>$5.95</td>
-        <td class='price-qt'>$9.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Shrimp</td>
-        <td class='price-pt'>$5.95</td>
-        <td class='price-qt'>$9.95</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>House</td>
-        <td class='price-pt'>$5.95</td>
-        <td class='price-qt'>$10.95</td>
-      </tr>
-      <tr>
-        <td>With Chicken, Roast Pork and Shrimp.</td>
-      </tr>
-      <tr>
-        <td class='menu-item'>Thai Pineapple</td>
-        <td class='price-pt'>$5.95</td>
-        <td class='price-qt'>$10.95</td>
-      </tr>
-      <tr>
-        <td class='item-description'>With Chicken and Shrimp.</td>
-      </tr>
-    </tbody>
-  </table>
-  <!-- END table .fried-rice -->
+  <h4>Mai Fun</h4>
+  <!-- START ul.mai-fun -->
+  <ul class="leaders">
+    <li><span>Vegetable</span><span>7.95</span></li>
+    <li><span>Chicken</span><span>8.95</span></li>
+    <li><span>Roast Pork</span><span>8.95</span></li>
+    <li><span>Beef</span><span>9.95</span></li>
+    <li><span>Shrimp</span><span>10.95</span></li>
+    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Singapore &mdash; with Pork & Shrimp</span><span>10.95</span></li>
+    <li><span>House &mdash; with Chicken, Roast Pork & Shrimp</span><span>11.95</span></li>
+    <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.96</span></li>
+  </ul>
+  <!-- END ul.mai-fun -->
+
+  <h4>Chow Fun</h4>
+  <!-- START ul.chow-fun -->
+  <ul class="leaders">
+    <li><span>Vegetable</span><span>7.95</span></li>
+    <li><span>Chicken</span><span>8.95</span></li>
+    <li><span>Roast Pork</span><span>8.95</span></li>
+    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Beef</span><span>10.95</span></li>
+    <li><span>Shrimp</span><span>10.95</span></li>
+    <li><span>House &mdash; with Chicken, Roast Pork & Shrimp</span><span>10.95</span></li>
+    <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.95</span></li>
+    <li><span></span><span></span></li>
+    <li><span></span><span></span></li>
+    <li><span></span><span></span></li>
+    <li><span></span><span></span></li>
+    <li><span></span><span></span></li>
+
+  </ul>
+
+
 
   <!-- START table .lo-mein -->
   <table class='lo-mein'>
@@ -246,66 +193,56 @@
         <th class='tbl-category'>Lo Mein</th>
       </tr>
       <tr class='tbl-description'>
-        <td class='category-description'>Lo Mein style is made with soft noodles.</td>
+        <td class='category-description'>Lo Mein style is made with soft noodles.<span>
       </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'>Plain</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$6.95</td>
-      </tr>
-      <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'>Vegetable</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$7.95</td>
-      </tr>
-      <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'>Chicken</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$8.95</td>
+
+      <h4>Lo Mein</h4>
+      <ul class="leaders">
+        <li><span>Plain</span><span>$6.95</span></li>
+        <li><span>Vegetable</span><li><span>$7.95</span><li>
+        <li><span>Chicken</span><li><span>$8.95</span><li>
+        <li><span>Roast Pork</span><li><span>$8.95</span><li>
+
+
+
+
+
+      </ul>
+
+
       </tr>
       <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'>Roast Pork</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$8.95</td>
+
       </tr>
       <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'>Beef</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$9.95</td>
+
       </tr>
       <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'>Shrimp</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$10.95</td>
+
+        <li><span>Beef</span><li><span>$9.95</span><li>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'>House with Chicken, Roast Pork and Shrimp</td>
-        <td class='price-pt'></td>
-        <td class='price-qt'>$10.95</td>
+
+        <li><span>Shrimp</span><li><span>$10.95</span><li>
       </tr>
       <tr>
-        <td class='item-description'>with Chicken, Roast Pork and Shrimp</td>
+
+        <li><span>House with Chicken, Roast Pork and Shrimp</span><li><span>$10.95</span><li>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'></td>
-        <td class='price-pt'></td>
-        <td class='price-qt'></td>
+        <td class='item-description'>with Chicken, Roast Pork and Shrimp<span>
       </tr>
       <tr>
-        <td class='chef-rec'></td>
-        <td class='menu-item'></td>
-        <td class='price-pt'></td>
-        <td class='price-qt'></td>
+
+        <li><span></span><li>
+
+        <li><span></span><li>
+      </tr>
+      <tr>
+
+        <li><span></span><li>
+
+        <li><span></span><li>
       </tr>
     </tbody>
   </table>
