--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -58,45 +58,7 @@
 <!-- START .menu -->
 <div class='menu'>
 
-  <!-- START ul.beverages -->
-  <ul>
-    <li> <span></span> </li>
-  </ul>
-
-
-
-  <!-- START table .beverages -->
-  <!-- <table class='beverages'>
-    <thead>
-      <tr>
-        <th><h4>Beverages</h4></th>
-      </tr>
-      <tr>
-        <td>All beverages for delivery orders are soft drinks in 20 fl. oz. bottles.<br>The following are the beverages available for delivery:<span>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Pepsi<span>
-        <td>Mist Twist<span>
-      </tr>
-      <tr>
-        <td>Diet Pepsi<span>
-        <td>Orange Crush<span>
-      </tr>
-      <tr>
-        <td>Mountain Dew<span>
-        <td>Lemon Iced Tea<span>
-      </tr>
-      <tr>
-        <td>Dr. Pepper<span>
-        <td>Lemonade<span>
-      </tr>
-    </tbody>
-  </table> -->
-  <!-- END table .beverages -->
-
-<div class="menu-div">
+<div class="menu-div appetizer-div">
   <h4>Appetizers</h4>
   <!-- START ul.appetizers -->
     <ul class="leaders">
@@ -121,7 +83,7 @@
   <!-- END ul.appetizers -->
 </div>
 
-<div class="menu-div">
+<div class="menu-div fried-rice-div">
   <h4>Fried Rice</h4>
   <!-- START ul.fried-rice -->
     <ul class="leaders">
@@ -136,9 +98,9 @@
   <!-- END ul.fried-rice -->
 </div>
 
-
+<div class="menu-div lo-mein-div">
   <h4>Lo Mein</h4>
-  <p>Lo Mein is made with soft noodles.</p>
+  <p class="description">Lo Mein is made with soft noodles.</p>
   <!-- START ul.lo-mein -->
   <ul class="leaders">
     <li><span>Plain</span><span>6.95</span></li>
@@ -151,7 +113,9 @@
     <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.95</span></li>
   </ul>
   <!-- END ul.lo-mein -->
+</div>
 
+<div class="menu-div mai-fun-div">
   <h4>Mai Fun</h4>
   <!-- START ul.mai-fun -->
   <ul class="leaders">
@@ -165,7 +129,9 @@
     <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.96</span></li>
   </ul>
   <!-- END ul.mai-fun -->
+</div>
 
+<div class="menu-div chow-fun-div">
   <h4>Chow Fun</h4>
   <!-- START ul.chow-fun -->
   <ul class="leaders">
@@ -174,79 +140,31 @@
     <li><span>Roast Pork</span><span>8.95</span></li>
     <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Beef</span><span>10.95</span></li>
     <li><span>Shrimp</span><span>10.95</span></li>
-    <li><span>House &mdash; with Chicken, Roast Pork & Shrimp</span><span>10.95</span></li>
-    <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.95</span></li>
-    <li><span></span><span></span></li>
-    <li><span></span><span></span></li>
-    <li><span></span><span></span></li>
-    <li><span></span><span></span></li>
-    <li><span></span><span></span></li>
+    <li><span>House &mdash; <i>with Chicken, Roast Pork & Shrimp</i></span><span>10.95</span></li>
+    <li><span>Seafood &mdash; <i>with Shrimp, Crab Meat & Squid</i></span><span>12.95</span></li>
+  </ul>
+  <!-- END ul.chow-fun -->
+</div>
 
+<div class="menu-div kung-pao-div">
+  <h4>Kung Pao</h4>
+  <p class="description">Kung Pao style is a spicy stir-fry dish topped with Peanuts and served with White Rice.</p>
+  <p class="description">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
+  <!-- START ul.kung-pao -->
+  <ul class="leaders">
+    <li><span>Fried Tofu</span><span>7.95</span></li>
+    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
+    <li><span>Roast Pork</span><span>8.95</span></li>
+    <li><span>Beef</span><span>9.95</span></li>
+    <li><span>Shrimp</span><span>10.95</span></li>
   </ul>
 
-
-
-  <!-- START table .lo-mein -->
-  <table class='lo-mein'>
-    <thead>
-      <tr class='tbl-title'>
-        <th class='tbl-category'>Lo Mein</th>
-      </tr>
-      <tr class='tbl-description'>
-        <td class='category-description'>Lo Mein style is made with soft noodles.<span>
-      </tr>
-
-      <h4>Lo Mein</h4>
-      <ul class="leaders">
-        <li><span>Plain</span><span>$6.95</span></li>
-        <li><span>Vegetable</span><li><span>$7.95</span><li>
-        <li><span>Chicken</span><li><span>$8.95</span><li>
-        <li><span>Roast Pork</span><li><span>$8.95</span><li>
+</div>
 
 
 
 
 
-      </ul>
-
-
-      </tr>
-      <tr>
-
-      </tr>
-      <tr>
-
-      </tr>
-      <tr>
-
-        <li><span>Beef</span><li><span>$9.95</span><li>
-      </tr>
-      <tr>
-
-        <li><span>Shrimp</span><li><span>$10.95</span><li>
-      </tr>
-      <tr>
-
-        <li><span>House with Chicken, Roast Pork and Shrimp</span><li><span>$10.95</span><li>
-      </tr>
-      <tr>
-        <td class='item-description'>with Chicken, Roast Pork and Shrimp<span>
-      </tr>
-      <tr>
-
-        <li><span></span><li>
-
-        <li><span></span><li>
-      </tr>
-      <tr>
-
-        <li><span></span><li>
-
-        <li><span></span><li>
-      </tr>
-    </tbody>
-  </table>
-  <!-- END table .lo-mein -->
 
 </div>
 
