--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -161,6 +161,36 @@
 
 </div>
 
+<div class="menu-div kung-pao-div">
+  <h4>Szechuan</h4>
+  <p class="description">Szechuan style is a Red Chili-based sauce stir fried with Vegetables and served with White Rice.</p>
+  <p class="description">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
+  <!-- START ul.kung-pao -->
+  <ul class="leaders">
+    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
+    <li><span>Roast Pork</span><span>8.95</span></li>
+    <li><span>Beef</span><span>9.95</span></li>
+    <li><span>Shrimp</span><span>10.95</span></li>
+  </ul>
+</div>
+
+<div class="menu-div chefs-special-div">
+  <h4>Chef's Specials</h4>
+  <p class="description">Chef's Special Dishes are served with White Rice.</p>
+  <!-- START ul.chefs-special -->
+  <ul class="leaders">
+    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> General's Chicken</span><span>10.95</span></li>
+    <li><span>Lemon Chicken</span><span>10.95</span></li>
+    <li><span>Orange Chicken</span><span>10.95</span></li>
+    <li><span>Orange Shrimp</span><span>12.95</span></li>
+    <li><span>Happy Family &mdash; <i>Chicken, Beef, Shrimp, Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
+    <li><span>Four Seasons &mdash; <i>Chicken, Beef, Shrimp, and Roast Pork with Mixed Vegetables in a Brown Sauce.</i></span><span>14.95</span></li>
+    <li><span></span><span></span></li>
+    <li><span></span><span></span></li>
+
+  </ul>
+</div>
+
 
 
 
